# beat-the-books

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_wrangling.ipynb
src/: main.py  montecarlo.py
src/data/: nba_api_loader.py
src/files/: loading.py
src/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_experiment.ipynb
v1/src/: main.py  montecarlo.py  utils.py
v1/src/data/: cleanup.py
v1/src/files/: cleaning.py
v1/src/notebooks/: 02_feature_engineering.ipynb  03_model_experiment.ipynb
