[project]
name = "beat-the-books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nba-api>=1.10.1",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]
